--- a/Sources/Client/SwiftXP.SPT.ShowMeTheMoney.QuickSell.Client.csproj
+++ b/Sources/Client/SwiftXP.SPT.ShowMeTheMoney.QuickSell.Client.csproj
@@ -6,7 +6,6 @@
 
     <AssemblyName>SwiftXP.SPT.ShowMeTheMoney.QuickSell.Client</AssemblyName>
     <Product>Show Me The Money - Quick Sell</Product>
-    <Version>2.2.2</Version>
     <RestoreAdditionalProjectSources>
       https://api.nuget.org/v3/index.json;
       https://nuget.bepinex.dev/v3/index.json
@@ -15,19 +14,63 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <AnalysisLevel>latest-Recommended</AnalysisLevel>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <LicenseToolPath>$(HOME)/.dotnet/tools/dotnet-project-licenses</LicenseToolPath>
+    <LicenseToolPath Condition="'$(OS)' == 'Windows_NT'">
+      $(UserProfile)\.dotnet\tools\dotnet-project-licenses.exe</LicenseToolPath>
+  </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
+    <!-- <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" /> -->
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
     <PackageReference Include="UnityEngine.Modules" Version="2022.3.43" IncludeAssets="compile" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="$(MSBuildThisFileDirectory)\..\..\..\spt4-shared-dlls\*.dll" />
-    <Reference Include="$(MSBuildThisFileDirectory)\..\..\..\spt-show-me-the-money\Sources\Client\bin\Release\netstandard2.1\SwiftXP.SPT.ShowMeTheMoney.Client.dll" />
+    <!-- <Reference Include="$(MSBuildThisFileDirectory)/../../../spt4-shared-dlls/**/*.dll" /> -->
+    <Reference Include="$(MSBuildThisFileDirectory)/../../../spt-show-me-the-money/Sources/Client/bin/Release/netstandard2.1/SwiftXP.SPT.ShowMeTheMoney.Client.dll" />
+
+    <Reference Include="$(MSBuildThisFileDirectory)/../../../spt4-shared-dlls/Assembly-CSharp.dll" />
+    <Reference Include="$(MSBuildThisFileDirectory)/../../../spt4-shared-dlls/BepInEx.dll" />
+    <Reference Include="$(MSBuildThisFileDirectory)/../../../spt4-shared-dlls/Comfort.dll" />
+    <Reference Include="$(MSBuildThisFileDirectory)/../../../spt4-shared-dlls/Sirenix.Serialization.dll" />
+    <Reference Include="$(MSBuildThisFileDirectory)/../../../spt4-shared-dlls/spt-common.dll" />
+    <Reference Include="$(MSBuildThisFileDirectory)/../../../spt4-shared-dlls/spt-reflection.dll" />
+    <Reference Include="$(MSBuildThisFileDirectory)/../../../spt4-shared-dlls/UnityEngine.UI.dll" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
+
+  <Target Name="GenerateLicenseFile" AfterTargets="Publish">
+    <Message Text="Generating license file..." Importance="high" />
+
+    <Exec
+      Command="$(LicenseToolPath) --input &quot;$(MSBuildProjectFullPath)&quot; --output --outfile &quot;$(PublishDir)SwiftXP.SPT.ShowMeTheMoney.QuickSell.Client.LICENSES.txt&quot;"
+      EnvironmentVariables="DOTNET_ROLL_FORWARD=Major"
+      ConsoleToMSBuild="true"
+      IgnoreExitCode="false" />
+
+    <Message Text="License file generated." Importance="high" />
+  </Target>
+
+  <Target Name="CopyToPublishFolder" AfterTargets="GenerateLicenseFile">
+    <Message Text="Copying published files to /Publish folder..." Importance="high" />
+
+    <ItemGroup>
+      <PublishedFiles Include="$(PublishDir)SwiftXP.SPT.ShowMeTheMoney.QuickSell.Client.dll" />
+      <PublishedFiles Include="$(PublishDir)SwiftXP.SPT.ShowMeTheMoney.QuickSell.Client.LICENSES.txt" />
+    </ItemGroup>
+
+    <Copy SourceFiles="@(PublishedFiles)"
+      DestinationFolder="$(MSBuildProjectDirectory)/../../Publish/BepInEx/plugins/com.swiftxp.spt.showmethemoney.quicksell" />
+  </Target>
 </Project>
