Added explicit AnyCPU compilation.

--- a/Sources/Client/SwiftXP.SPT.ShowMeTheMoney.QuickSell.Client.csproj
+++ b/Sources/Client/SwiftXP.SPT.ShowMeTheMoney.QuickSell.Client.csproj
@@ -4,6 +4,9 @@
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
 
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
+
     <AssemblyName>SwiftXP.SPT.ShowMeTheMoney.QuickSell.Client</AssemblyName>
     <Product>Show Me The Money - Quick Sell</Product>
     <RestoreAdditionalProjectSources>
